--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
-body{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+*{
+    color: #393e61;
 }
-
 button{
     border: none;
     border-radius: 5px;
@@ -16,7 +13,16 @@ button:disabled{
     border: solid #cba5cc 2px;
     color: #cba5cc;
 }
-
+h1{
+    margin: 50px 0 20px 0;
+    font-size: 30px;
+}
+body{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
 .fruitContainer{
     display: flex;
     justify-content: center;
@@ -31,5 +37,15 @@ button:disabled{
 .fruitContainer Button{
     height: 30px;
     width: 30px;
+}
 
+.formContainer{
+    background-color: #f3ebf2;
+    margin-top: 60px;
+    padding: 30px;
+    border-radius: 10px;
+}
+form{
+    display: flex;
+    flex-direction: column;
 }
